lang/macro/tests/ui/fail/06-constructor-no-mut-ref.stderr
error: `&mut self` is mandatory for constructor of liquid contract
  --> $DIR/06-constructor-no-mut-ref.rs:10:20
   |
10 |         pub fn new(&self) {}
   |                    ^^^^^
